--- a/rhtmx-router/Cargo.toml
+++ b/rhtmx-router/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rhtml-router"
+name = "rhtmx-router"
 version = "0.1.0"
 edition = "2021"
-authors = ["RHTML Contributors"]
+authors = ["RHTMX Contributors"]
 license = "MIT"
 description = "File-based routing for Rust web frameworks with support for dynamic segments, catch-all routes, and optional parameters"
-repository = "https://github.com/jeetkhinde/RHTML"
+repository = "https://github.com/jeetkhinde/RHTMX"
 keywords = ["router", "web", "file-based", "routing", "framework-agnostic"]
 categories = ["web-programming"]
 readme = "README.md"
