--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tower-livereload = "0.9.6"
 urlencoding = "2.1"
 lazy_static = "1.4"
 once_cell = "1.19"
+maud = "0.26"
 sqlx = { version = "0.7", features = [
   "sqlite",
   "runtime-tokio-rustls",
