--- a/rhtmx-macro/Cargo.toml
+++ b/rhtmx-macro/Cargo.toml
@@ -11,3 +11,4 @@ syn = { version = "2.0", features = ["full", "extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 once_cell = "1.19"
+maud = "0.26"
