--- a/crates/rhtmx-sync/Cargo.toml
+++ b/crates/rhtmx-sync/Cargo.toml
@@ -24,7 +24,7 @@ axum = { workspace = true }
 tower = { workspace = true }
 tower-http = { workspace = true }
 tokio = { workspace = true }
-tokio-stream = "0.1"
+tokio-stream = { version = "0.1", features = ["sync"] }
 futures = "0.3"
 
 # Serialization & data
