--- a/crates/rhtmx/Cargo.toml
+++ b/crates/rhtmx/Cargo.toml
@@ -13,6 +13,8 @@ path = "src/lib.rs"
 
 [dependencies]
 rhtmx-macro = { path = "../rhtmx-macro" }
+rhtmx-parser = { path = "../rhtmx-parser" }
+rhtmx-router = { path = "../rhtmx-router" }
 
 axum = { workspace = true }
 tokio = { workspace = true }
@@ -23,6 +25,13 @@ tower-http = { workspace = true }
 regex = { workspace = true }
 once_cell = { workspace = true }
 maud = { workspace = true }
+sqlx = { workspace = true }
+chrono = { workspace = true }
+uuid = { workspace = true }
+anyhow = { workspace = true }
+tracing = { workspace = true }
+urlencoding = { workspace = true }
+toml = { workspace = true }
 
 [features]
 default = []
