--- a/crates/rhtmx-validation/wasm/Cargo.toml
+++ b/crates/rhtmx-validation/wasm/Cargo.toml
@@ -13,6 +13,7 @@ wasm-bindgen = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.6"
 rhtmx-validation-core = { path = "../core", default-features = false }
+console_error_panic_hook = { version = "0.1", optional = true }
 
 [dependencies.web-sys]
 version = "0.3"
@@ -20,6 +21,9 @@ features = ["console"]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
+
+[features]
+console_error_panic_hook = ["dep:console_error_panic_hook"]
 
 [profile.release]
 opt-level = "s"  # Optimize for size
