--- a/crates/rusty-forms/Cargo.toml
+++ b/crates/rusty-forms/Cargo.toml
@@ -1,38 +1,25 @@
-[package]
-name = "rusty-forms"
+[workspace]
+members = [
+  "rusty-forms",
+  "rusty-forms-derive",
+  "rusty-forms-validation",
+  "rusty-forms-types",
+  "rusty-forms-wasm",
+]
+
+resolver = "2"
+
+[workspace.package]
 version = "0.1.0"
 edition = "2021"
-description = "A complete Rust form validation library with derive macros, type-safe validation, and client/server sync"
 license = "MIT"
-keywords = ["forms", "validation", "web", "htmx", "derive"]
-categories = ["web-programming", "wasm"]
-repository = "https://github.com/jeetkhinde/RHTMX"
-documentation = "https://docs.rs/rusty-forms"
+authors = ["Your Name <your.email@example.com>"]
+repository = "https://github.com/yourusername/rusty-forms"
 
-[dependencies]
-# Core derive macros (always included)
-rusty-forms-derive = { path = "../rusty-forms-derive", version = "0.1.0" }
-
-# Optional: Core validation functions
-rusty-forms-validation = { path = "../rusty-forms-validation", version = "0.1.0", optional = true }
-
-# Optional: Nutype validated types
-rusty-forms-types = { path = "../rusty-forms-types", version = "0.1.0", optional = true }
-
-# Required for the Validate trait
+[workspace.dependencies]
+# Shared external dependencies
 serde = { version = "1.0", features = ["derive"] }
-
-[features]
-default = []
-
-# Include validation functions for custom validators
-validation = ["dep:rusty-forms-validation"]
-
-# Include nutype-based validated types
-nutype = ["dep:rusty-forms-types"]
-
-# Enable all features
-full = ["validation", "nutype"]
-
-[dev-dependencies]
-serde_json = "1.0"
+syn = { version = "2.0", features = ["full", "extra-traits"] }
+quote = "1.0"
+proc-macro2 = "1.0"
+nutype = { version = "0.5", default-features = false }
