--- a/crates/pilcrow/Cargo.toml
+++ b/crates/pilcrow/Cargo.toml
@@ -3,21 +3,19 @@
 name = "pilcrow"
 version = "0.1.0"
 edition = "2021"
-description = "Pilcrow response builders for Axum + Maud"
+description = "Premium response builders and content negotiation for Axum"
 license = "MIT"
 repository = "https://github.com/jeetkhinde/RHTMX"
 
 [lib]
 name = "pilcrow"
 path = "src/lib.rs"
-proc-macro = true
 [dependencies]
-maud = "0.26"
+anyhow = "1.0.101"
 axum = "0.7"
+cookie = "0.18"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.8"
-anyhow = "1.0.101"
-proc-macro2 = "1"
-quote = "1"
-syn = { version = "2", features = ["full"] }
+urlencoding = "2.1"
+tracing = "0.1"
